--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         } else {
           alert('Nem :(');
           score = 0;
+          questionHistory = [];
         }
         document.querySelector('#answer').value = ''
         updateScore();
