add github link in html

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       License: Do whatever you want           | http://www.wtfpl.net/
       Author:  Balazs Nadasdi                 | https://cheppers.com/
       Purpose: Practice tool for my daughter
+      GitHub:  https://github.com/yitsushi/szorzotabla-gyakorlas
     -->
     <div>
       <select id='levelselector' onChange='changeLevel(this)' autocomplete="off">
